Fix the bug in minDFA algorithm

--- a/regex_to_min_dfa/regex_to_min_dfa.ipynb
+++ b/regex_to_min_dfa/regex_to_min_dfa.ipynb
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 1,
       "metadata": {
         "id": "RbrSVpK7DkZc"
       },
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 2,
       "metadata": {
         "id": "NXE5FqFYDkZd"
       },
@@ -161,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 3,
       "metadata": {
         "id": "GzKeVXnaDkZe"
       },
@@ -227,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 5,
       "metadata": {
         "id": "O4FkYbiwDkZf"
       },
@@ -378,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 6,
       "metadata": {
         "id": "0cDurqZcDkZg"
       },
@@ -616,7 +616,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 7,
       "metadata": {
         "id": "RP6fylNhDkZh"
       },
@@ -668,7 +668,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 8,
       "metadata": {
         "id": "eycMAD3kLXjd"
       },
@@ -723,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -761,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -896,10 +896,10 @@
               "</svg>\n"
             ],
             "text/plain": [
-              "<graphviz.graphs.Digraph at 0x76550447dde0>"
+              "<graphviz.graphs.Digraph at 0x79c1a34e7550>"
             ]
           },
-          "execution_count": 68,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -920,7 +920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 11,
       "metadata": {
         "id": "VFCGDHSZL6Pk"
       },
@@ -970,7 +970,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -984,7 +984,6 @@
         "    lower_tri_matrix = LowerTriangularMatrix(len(dfa.super_states))\n",
         "    lower_tri_matrix.fill_with_dfa(dfa)\n",
         "    lower_tri_matrix.iterate_to_min_dfa(dfa, input_chars)\n",
-        "\n",
         "    new_dfa = DFA()\n",
         "\n",
         "    # dictionary of [int, set]\n",
@@ -992,7 +991,6 @@
         "    id = 0\n",
         "    for pair in lower_tri_matrix.pairs.keys():\n",
         "        if lower_tri_matrix.get(pair[0], pair[1]) == \"∅\":\n",
-        "\n",
         "            s0 = dfa.get_super_state_from_label(pair[0])\n",
         "            s1 = dfa.get_super_state_from_label(pair[1])\n",
         "\n",
@@ -1013,33 +1011,93 @@
         "                    new_states[id] = {s0, s1}\n",
         "                    id += 1\n",
         "\n",
-        "    # create the new DFA\n",
-        "    for id in new_states.keys():\n",
-        "        new_super_state = SuperState()\n",
-        "        sub_states = list(new_states[id])\n",
-        "        new_super_state.sub_states = sub_states\n",
-        "        new_super_state.label = \"S\" + str(id)\n",
-        "        representativ_state = sub_states[0]\n",
+        "    # iterate over the matrix to add the states that does not appear in the dictionary values\n",
+        "    for pair in lower_tri_matrix.pairs.keys():\n",
+        "        if lower_tri_matrix.get(pair[0], pair[1]) != \"∅\":\n",
+        "            s0 = dfa.get_super_state_from_label(pair[0])\n",
+        "            s1 = dfa.get_super_state_from_label(pair[1])\n",
+        "            found_1 = False\n",
+        "            for key in new_states.keys():\n",
+        "                if s0 in new_states[key]:\n",
+        "                    found_1 = True\n",
+        "                    break\n",
+        "            if not found_1:\n",
+        "                new_states[id] = {s0}\n",
+        "                id += 1\n",
         "\n",
-        "        for curr_edge in representativ_state.out_edges:\n",
-        "            destination_state = curr_edge.destination\n",
-        "            all_destinations = [id for id, states in new_states.items() if destination_state.label in states]\n",
-        "            all_destinations = set(all_destinations)\n",
-        "            for dest_id in all_destinations:\n",
-        "                new_edge = edge()\n",
-        "                new_edge.label = curr_edge.label\n",
-        "                new_edge.destination = \"S\"+str(dest_id)\n",
-        "                new_super_state.out_edges.append(new_edge)\n",
+        "            found_2 = False\n",
+        "            for key in new_states.keys():\n",
+        "                if s1 in new_states[key]:\n",
+        "                    found_2 = True\n",
+        "                    break\n",
+        "            if not found_2:\n",
+        "                new_states[id] = {s1}\n",
+        "                id += 1\n",
+        "\n",
+        "\n",
+        "    # create a new dictionary the key is the representitive of the superstate and the value is a list of the superstates\n",
+        "    super_states_with_representatives = dict()\n",
+        "    for key in new_states.keys():\n",
+        "        curr_states_list = list(new_states[key])\n",
+        "        representativ_state = curr_states_list[0]\n",
+        "        super_states_with_representatives[representativ_state.label] = curr_states_list\n",
+        "\n",
+        "    new_super_states = set()\n",
+        "    # Create SuperStates for each representitive and connect the edges from each representitive to other representitives\n",
+        "    for key in super_states_with_representatives.keys():\n",
+        "        super_state = SuperState()\n",
+        "        super_state.label = key\n",
+        "        representative = super_states_with_representatives[key][0]\n",
+        "        for repr_edge in representative.out_edges:\n",
+        "            curr_dest = repr_edge.destination\n",
+        "            dest_representative = None\n",
+        "            for key in super_states_with_representatives.keys():\n",
+        "                if curr_dest in super_states_with_representatives[key]:\n",
+        "                    dest_representative = super_states_with_representatives[key][0]\n",
+        "                    break\n",
+        "            if dest_representative:\n",
         "                \n",
-        "        new_dfa.super_states.add(new_super_state)\n",
-        "                \n",
-        "    for super_state in new_dfa.super_states:\n",
-        "        for sub_state in super_state.sub_states:\n",
-        "            for curr_edge in sub_state.out_edges:\n",
-        "                for new_super_state in new_dfa.super_states:\n",
-        "                    if curr_edge.destination in new_super_state.sub_states:\n",
-        "                        super_state.out_edges.append(edge(curr_edge.label, new_super_state))\n",
+        "                super_state.out_edges.append(edge(repr_edge.label, dest_representative))\n",
+        "\n",
+        "        # print the current state and its output edges:\n",
+        "        print(f\"State : {super_state.label}\")\n",
+        "        for e in super_state.out_edges:\n",
+        "            print(f\"Edge : {e.label} -> {e.destination.label}\")\n",
+        "        new_super_states.add(super_state)\n",
+        "\n",
+        "        \n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "    # set the start state, loop over the super_states_with_representatives to find the start state\n",
+        "    for key in super_states_with_representatives.keys():\n",
+        "        found_start = False\n",
+        "        if dfa.start_super_state in super_states_with_representatives[key]:\n",
+        "            # get this representitive from the new_super_states\n",
+        "            for state in new_super_states:\n",
+        "                if state.label == key:\n",
+        "                    new_dfa.start_super_state = state\n",
+        "                    found_start = True\n",
+        "                    break\n",
+        "        if found_start:\n",
+        "            break\n",
+        "    \n",
+        "    # set the accept states, loop over the super_states_with_representatives to find the accept states\n",
+        "    for key in super_states_with_representatives.keys():\n",
+        "        found_accept = False\n",
+        "        for accept_state in dfa.accept_super_states:\n",
+        "            if accept_state in super_states_with_representatives[key]:\n",
+        "                # get this representitive from the new_super_states\n",
+        "                for state in new_super_states:\n",
+        "                    if state.label == key:\n",
+        "                        new_dfa.accept_super_states.add(state)\n",
+        "                        found_accept = True\n",
         "                        break\n",
+        "            if found_accept:\n",
+        "                break\n",
+        "\n",
+        "    new_dfa.super_states = new_super_states\n",
         "\n",
         "    return new_dfa\n",
         "\n"
@@ -1047,7 +1105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1056,13 +1114,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
         "def Construct_minDFA_Json (dfa: DFA):\n",
         "      output_json = dict()\n",
-        "      for stat in dfa:\n",
+        "      for stat in dfa.super_states:\n",
         "        if(stat.is_start):\n",
         "          output_json[\"starting_state\"] = stat.label\n",
         "        state_dict = dict()\n",
@@ -1085,16 +1143,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "'digraph {\\n\\tgraph [label=\"DFA Cleaned\" rankdir=LR]\\n\\tS2 [peripheries=2]\\n\\tS1 [peripheries=2]\\n\\t\"\" [shape=none]\\n\\t\"\" -> S0\\n\\tS0\\n\\tS0 -> S1 [label=a]\\n\\tS0 -> S2 [label=b]\\n}\\n'"
+              "'digraph {\\n\\tgraph [label=\"DFA Cleaned\" rankdir=LR]\\n\\tS1 [peripheries=2]\\n\\tS2 [peripheries=2]\\n\\t\"\" [shape=none]\\n\\t\"\" -> S0\\n\\tS0\\n\\tS0 -> S1 [label=a]\\n\\tS0 -> S2 [label=b]\\n}\\n'"
             ]
           },
-          "execution_count": 88,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1108,23 +1166,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{SuperState S5,S4,,SuperState S2,S5,,}\n"
+            "State : S1\n",
+            "State : S0\n",
+            "Edge : a -> S1\n",
+            "Edge : b -> S1\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "'digraph {\\n\\tgraph [label=minDFA rankdir=LR]\\n\\tS0\\n}\\n'"
+              "'digraph {\\n\\tgraph [label=minDFA rankdir=LR]\\n\\tS0\\n\\tS1\\n\\tS0 -> S1 [label=a]\\n\\tS0 -> S1 [label=b]\\n}\\n'"
             ]
           },
-          "execution_count": 89,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1132,10 +1193,9 @@
       "source": [
         "min_dfa = min_DFA(dfa, input_chars)\n",
         "\n",
-        "print(min_dfa.super_states)\n",
         "\n",
-        "\n",
-        "min_dfa.visualize(\"minDFA\")"
+        "min_dfa.visualize(\"minDFA\")\n",
+        "#Construct_minDFA_Json(min_dfa)"
       ]
     }
   ],
